Fix pointer capture release caused by fake mouse moves.

Fake mousemoves are not sent to DOM.  So they shouldn't update internal
states that control real events sent to DOM.

Bug: 787365
Change-Id: Ie380c959dd0c44a14cc2517574372e4118654736