third_party/WebKit/Source/core/input/PointerEventManager.cpp
@@ -467,6 +467,14 @@ WebInputEventResult PointerEventManager::SendMousePointerEvent(
     const AtomicString& mouse_event_type,
     const WebMouseEvent& mouse_event,
     const Vector<WebMouseEvent>& coalesced_events) {
+  // For fake mouse move events, skip updating internal states and dispatching
+  // events to DOM.
+  if ((mouse_event_type == EventTypeNames::mousemove) &&
+      mouse_event.GetModifiers() &
+          WebInputEvent::Modifiers::kRelativeMotionEvent) {
+    return WebInputEventResult::kHandledSuppressed;
+  }
+
   PointerEvent* pointer_event = pointer_event_factory_.Create(
       mouse_event_type, mouse_event, coalesced_events,
       frame_->GetDocument()->domWindow());
@@ -489,14 +497,6 @@ WebInputEventResult PointerEventManager::SendMousePointerEvent(
 
   EventTarget* effective_target = GetEffectiveTargetForPointerEvent(
       pointer_event_target, pointer_event->pointerId());
-
-  // Do not send the fake mouse move event to the DOM, because the mouse does
-  // not move.
-  if ((mouse_event_type == EventTypeNames::mousemove) &&
-      mouse_event.GetModifiers() &
-          WebInputEvent::Modifiers::kRelativeMotionEvent) {
-    return WebInputEventResult::kHandledSuppressed;
-  }
 
   WebInputEventResult result =
       DispatchPointerEvent(effective_target, pointer_event);
